Fix leaks due to nsISupportsArray misuse.  Bug 323377, patch by Martijn Wargers <martijn.martijn@gmail.com>, r=pike, sr=bzbarsky